--- a/RunRepsTracker/app/src/main/AndroidManifest.xml
+++ b/RunRepsTracker/app/src/main/AndroidManifest.xml
@@ -19,5 +19,10 @@
         <activity android:name=".SitUpActivity" />
         <activity android:name=".RunActivity"></activity>
     </application>
-    <uses-feature android:name="android.hardware.sensor.proximity" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.sensor.proximity"
+        android:required="true" />
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
 </manifest>
