--- a/RunRepsTracker/app/src/main/AndroidManifest.xml
+++ b/RunRepsTracker/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.matej.runrepstracker">
 
-
     <uses-feature
         android:name="android.hardware.sensor.proximity"
         android:required="true" />
@@ -26,8 +25,10 @@
         <activity android:name=".PushUpActivity" />
         <activity android:name=".SitUpActivity" />
         <activity android:name=".RunActivity" />
-        <activity android:name=".ResultHistoryActivity"></activity>
-
+        <activity android:name=".ResultHistoryActivity" />
+        <activity android:name=".PushUpHistoryActivity" />
+        <activity android:name=".SitUpHistoryActivity" />
+        <activity android:name=".RunHistoryActivity"></activity>
     </application>
 
 </manifest>
