Screenshots and Readme added

--- a/RunRepsTracker/app/src/main/AndroidManifest.xml
+++ b/RunRepsTracker/app/src/main/AndroidManifest.xml
@@ -55,7 +55,7 @@
         <activity
             android:name=".RunActivity"
             android:label="@string/title_activity_run" />
-        <activity android:name=".AboutActivity"></activity>
+        <activity android:name=".AboutActivity" />
     </application>
 
 </manifest>
